// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotplotOptions Renders when hidden 1`] = `
<div
  className="Options-container"
  style={
    Object {
      "height": 0,
      "opacity": 0,
      "overflow": "hidden",
    }
  }
>
  <Divider>
    Advanced options
  </Divider>
  <DotplotOptions
    change={[Function]}
    form={Object {}}
    header={
      Array [
        "a",
        "b",
      ]
    }
  />
</div>
`;

exports[`DotplotOptions Renders when visible 1`] = `
<div
  className="Options-container"
  style={
    Object {
      "height": "auto",
      "opacity": 1,
      "overflow": "auto",
    }
  }
>
  <Divider>
    Advanced options
  </Divider>
  <DotplotOptions
    change={[Function]}
    form={Object {}}
    header={
      Array [
        "a",
        "b",
      ]
    }
  />
</div>
`;
